--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile files('libs/google-api-client-1.21.0.jar')
+    compile files('libs/google-api-client-android-1.21.0.jar')
+    compile files('libs/google-oauth-client-1.21.0.jar')
+    compile files('libs/google-http-client-1.21.0.jar')
+    compile files('libs/google-http-client-android-1.21.0.jar')
+    compile files('libs/jsr305-1.3.9.jar')
+    compile files('libs/gson-2.1.jar')
+    compile files('libs/google-http-client-gson-1.21.0.jar')
+    compile files('libs/jackson-core-2.1.3.jar')
+    compile files('libs/google-http-client-jackson2-1.21.0.jar')
+    compile files('libs/jdo2-api-2.3-eb.jar')
+    compile files('libs/google-http-client-jdo-1.21.0.jar')
+    compile files('libs/google-api-services-civicinfo-v2-rev13-1.21.0.jar')
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.1'
 }
