--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".CivicInfoTestActivity"
-            android:label="@string/title_activity_civic_info_test"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".CivicInfoTestActivity">
         </activity>
     </application>
 </manifest>
