--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,17 +24,19 @@
 
         <activity
             android:name=".PollingLocationActivity"
-            android:label="@string/title_activity_polling_location"></activity>
+            android:label="@string/title_activity_polling_location" />
 
+        <activity android:name=".CandidatesActivity" />
         <activity
-            android:name=".CandidatesActivity"></activity>
+            android:name=".EnterAddressActivity"
+            android:label="Enter Your Registered Address"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
+
 </manifest>
