--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".MainActivity"
             android:label="Votr">
@@ -21,15 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".PollingLocationActivity"
             android:label="@string/title_activity_polling_location" />
-
         <activity android:name=".CandidatesActivity" />
         <activity
             android:name=".EnterAddressActivity"
-            android:label="Enter Your Registered Address"></activity>
+            android:label="Enter Your Registered Address" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -37,6 +34,9 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".SelectStateActivity" android:label="Select Your State" />
+        <activity android:name=".VotingDatesActivity" android:label="Election Dates"></activity>
     </application>
 
 </manifest>
